fix word wrapping issue

--- a/client/core/src/css/tui-editor-override.css
+++ b/client/core/src/css/tui-editor-override.css
@@ -11,3 +11,6 @@
 .tui-editor-contents {
     font-size: 1.1rem;
 }
+.tui-editor-contents > p {
+    word-wrap: break-word;
+}
